Updated css and html, fixed alignment and gradient

--- a/Style.css
+++ b/Style.css
@@ -2,10 +2,16 @@ h1 {
     margin: auto;
     width: 50%;
     padding-top: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+
+h3 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 p {
     text-align: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 .body_head {
@@ -21,16 +27,15 @@ p {
 
 .page_style {
     margin-top: 20px;
+    margin-left: 150px;
+    margin-right: 150px;
     padding: 10px 100px 100px 100px;
     border-radius: 8px;
-    background-color: gray;
+    background: rgb(255, 255, 255);
+    background: linear-gradient(180deg, rgba(255, 255, 255, 1) 0%, rgba(51, 51, 51, 0.5) 100%);
 }
 
-.work1 {
-    text-align: left;
-}
-
-.work4 {
+.work {
     text-align: left;
 }
 
@@ -50,4 +55,6 @@ p {
     margin-top: 0px;
 }
 
-#container {}
+#container {
+    width: 100%;
+}
